<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:padding="@dimen/_10sdp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_24sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_messages_to_you"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textSize="@dimen/_14sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/_16sdp"
                    app:cardElevation="0dp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_profile_pic_notes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:background="@drawable/gradient_bottom"
                            android:layout_height="@dimen/_80sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_no_notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_12sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/tv_name_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_marginBottom="@dimen/_5sdp"
                            app:layout_constraintBottom_toTopOf="@+id/tv_no_notes"
                            app:layout_constraintStart_toStartOf="@+id/tv_no_notes" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/interested_in_you"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="@dimen/_18sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/premium_members_can_view_all_their_likes_at_once"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_continue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/upgrade"
                        android:textSize="@dimen/_12ssp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:padding="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded_button"
                        app:layout_constraintTop_toBottomOf="@+id/et_otp_code"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_received_likes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>